# Mycraft-OpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/Modules/: FindGLFW.cmake  FindGLFW.cmake~  Findglbinding.cmake
data/: Modern_diffiuse.dds  box.dds  cursor.dds  heightmap.dds  piram.dds  text.dds
shaders/: simple_cubemaps_fs.glsl  simple_cubemaps_vs.glsl  simple_lights_fs.glsl  simple_lights_vs.glsl  simple_skybox_fs.glsl  simple_skybox_vs.glsl
src/dv_project_3D/: CMakeLists.txt  camera.h  libs.h  main.cpp  sampleapp.cpp  sampleapp.h  shader.h
src/libs/OGLAppFramework/: CMakeLists.txt  externallibs.h  oglappframework.h  oglapplication.cpp  oglapplication.h  utilities.cpp  utilities.h
